--- a/projectsFolder/project3/index.html
+++ b/projectsFolder/project3/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>PROJECT -3</title>
+    <title>PROJECT -3 // Number Guessing Game</title>
     <style>
       body {
         padding: 0;
@@ -113,7 +113,7 @@ cursor: pointer;
 // hamne ek array banaya h jisme user ke value store karayenge taki user ko ye value dikha sake ki vo ye sab value guess kar liya use vo dubara guess  na kare 
    let prevGuess =[]
 
-  //  yha h ek valriable banaya h jo ye batayega ki user ne kitne bar number guess kar liya h 
+  //  yha h ek variable banaya h jo ye batayega ki user ne kitne bar number guess kar liya h 
    let numGuess = 1
 
   //  thik esi tarah ek playgame  name ka variabble bana liya h taki user ese play kar sake game ek  bar khatam ho jane ke bad
